--- a/course/Ag_deeplearning/lesson_one_ANN_DL/week4/Building your Deep Neural Network - Step by Step/Building your Deep Neural Network - Step by Step v5.ipynb
+++ b/course/Ag_deeplearning/lesson_one_ANN_DL/week4/Building your Deep Neural Network - Step by Step/Building your Deep Neural Network - Step by Step v5.ipynb
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,6 +795,7 @@
     "\n",
     "    Returns:\n",
     "    cost -- cross-entropy cost\n",
+    "    dow按：这一部分是和第三周的作业相似\n",
     "    \"\"\"\n",
     "    \n",
     "    m = Y.shape[1]\n",
@@ -903,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,12 +922,13 @@
     "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
     "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
     "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    dow按：这一部分是和第三周的作业相似\n",
     "    \"\"\"\n",
     "    A_prev, W, b = cache\n",
     "    m = A_prev.shape[1]\n",
     "    ### START CODE HERE ### (≈ 3 lines of code)\n",
     "    dW = np.dot(dZ,A_prev.T)/m\n",
-    "    db = np.sum(dZ, axis=1,keepdims=True)/m # dow:此处有疑问————输出矩阵是一列，求每行的平均值\n",
+    "    db = np.sum(dZ, axis=1,keepdims=True)/m # dow按:此处有疑问————输出矩阵是一列，求每行的平均值\n",
     "    dA_prev = np.dot(W.T,dZ)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1023,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,10 +1194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: L_model_backward\n",
@@ -1224,24 +1224,24 @@
     "    \n",
     "    # Initializing the backpropagation\n",
     "    ### START CODE HERE ### (1 line of code)\n",
-    "    dAL = None\n",
+    "    dAL = -(np.divide(Y,AL) - np.divide(1-Y,1-AL))\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    # Lth layer (SIGMOID -> LINEAR) gradients. Inputs: \"AL, Y, caches\". Outputs: \"grads[\"dAL\"], grads[\"dWL\"], grads[\"dbL\"]\n",
     "    ### START CODE HERE ### (approx. 2 lines)\n",
-    "    current_cache = None\n",
-    "    grads[\"dA\" + str(L)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = None\n",
+    "    current_cache = caches[L-1] # dow按：这个current_cache是什么？不是caches吗？\n",
+    "    grads[\"dA\" + str(L)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = linear_activation_backward(dAL, current_cache, 'sigmoid')\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    for l in reversed(range(L-1)):\n",
     "        # lth layer: (RELU -> LINEAR) gradients.\n",
     "        # Inputs: \"grads[\"dA\" + str(l + 2)], caches\". Outputs: \"grads[\"dA\" + str(l + 1)] , grads[\"dW\" + str(l + 1)] , grads[\"db\" + str(l + 1)] \n",
     "        ### START CODE HERE ### (approx. 5 lines)\n",
-    "        current_cache = None\n",
-    "        dA_prev_temp, dW_temp, db_temp = None\n",
-    "        grads[\"dA\" + str(l + 1)] = None\n",
-    "        grads[\"dW\" + str(l + 1)] = None\n",
-    "        grads[\"db\" + str(l + 1)] = None\n",
+    "        current_cache = caches[l]\n",
+    "        dA_prev_temp, dW_temp, db_temp = linear_activation_backward(grads[\"dA\" + str(l + 2)],current_cache,'relu')\n",
+    "        grads[\"dA\" + str(l + 1)] = dA_prev_temp\n",
+    "        grads[\"dW\" + str(l + 1)] = dW_temp\n",
+    "        grads[\"db\" + str(l + 1)] = db_temp\n",
     "        ### END CODE HERE ###\n",
     "\n",
     "    return grads"
@@ -1249,9 +1249,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dW1 = [[ 0.41010002  0.07807203  0.13798444  0.10502167]\n",
+      " [ 0.          0.          0.          0.        ]\n",
+      " [ 0.05283652  0.01005865  0.01777766  0.0135308 ]]\n",
+      "db1 = [[-0.22007063]\n",
+      " [ 0.        ]\n",
+      " [-0.02835349]]\n",
+      "dA1 = [[ 0.12913162 -0.44014127]\n",
+      " [-0.14175655  0.48317296]\n",
+      " [ 0.01663708 -0.05670698]]\n"
+     ]
+    }
+   ],
    "source": [
     "AL, Y_assess, caches = L_model_backward_test_case()\n",
     "grads = L_model_backward(AL, Y_assess, caches)\n",
@@ -1317,10 +1333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: update_parameters\n",
@@ -1343,16 +1357,33 @@
     "\n",
     "    # Update rule for each parameter. Use a for loop.\n",
     "    ### START CODE HERE ### (≈ 3 lines of code)\n",
-    "\n",
+    "    for l in range(1,L): #dow按：是否需要遍历到1+L\n",
+    "        parameters[\"W\" + str(l)] = parameters[\"W\" + str(l)] - learning_rate*grads[\"dW\" + str(l)]\n",
+    "        parameters[\"b\" + str(l)] = parameters[\"b\" + str(l)] - learning_rate*grads[\"db\" + str(l)]\n",
     "    ### END CODE HERE ###\n",
     "    return parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[-0.59562069 -0.09991781 -2.14584584  1.82662008]\n",
+      " [-1.76569676 -0.80627147  0.51115557 -1.18258802]\n",
+      " [-1.0535704  -0.86128581  0.68284052  2.20374577]]\n",
+      "b1 = [[-0.04659241]\n",
+      " [-1.28888275]\n",
+      " [ 0.53405496]]\n",
+      "W2 = [[-0.5961597  -0.0191305   1.17500122]]\n",
+      "b2 = [[-0.74787095]]\n"
+     ]
+    }
+   ],
    "source": [
     "parameters, grads = update_parameters_test_case()\n",
     "parameters = update_parameters(parameters, grads, 0.1)\n",
